divide pug files into components

--- a/views/client/pages/home/index.pug
+++ b/views/client/pages/home/index.pug
@@ -1,7 +1,4 @@
-doctype html 
-html 
-    head 
-        title home 
+include ../../layouts/default.pug 
 
-    body 
-        h1 home
+block main 
+    h1 home
