--- a/views/client/pages/products/index.pug
+++ b/views/client/pages/products/index.pug
@@ -1,7 +1,4 @@
-doctype html 
-html 
-    head 
-        title products
+include ../../layouts/default.pug 
 
-    body 
-        h1 products
+block main 
+    h1 products
