--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -2,6 +2,7 @@ doctype html
 html 
     head 
         title #{pageTitle}
+        link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css", rel="stylesheet")
 
     body 
         include ../partials/header.pug
@@ -9,3 +10,5 @@ html
         block main
 
         include ../partials/footer.pug
+
+        script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js")
