--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -3,7 +3,7 @@ html
     head 
         title #{pageTitle}
         link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css", rel="stylesheet")
-        link(href="./css/testCss.css", rel="stylesheet")
+        link(href="./css/header_footer.css", rel="stylesheet")
 
     body 
         include ../partials/header.pug
