--- a/views/client/pages/products/index.pug
+++ b/views/client/pages/products/index.pug
@@ -8,12 +8,13 @@ block main
                 +box-head("danh mục sản phẩm")
 
     .row
-        .col-4.mb-3
-            .product-item
-                .inner-image
-                    img(src="https://cdn11.dienmaycholon.vn/filewebdmclnew/DMCL21/Picture/News/News_expe_9247/9247.png?version=131724", alt="iPhone 16")
-                .inner-content
-                    h3.inner-title iPhone 16
-                    .inner-price-new 80$
-                    .inner-price-old 100$
-                    .inner-discount -20%
+        each item in products
+            .col-4.mb-3
+                .product-item
+                    .inner-image
+                        img(src=item.thumbnail, alt=item.description)
+                    .inner-content
+                        h3.inner-title #{item.title}
+                        .inner-price-new #{item.priceNew}$
+                        .inner-price-old #{item.price}$
+                        .inner-discount -#{item.discountPercentage}%
