--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -53,8 +53,12 @@ block main
     // https://getbootstrap.com/docs/4.6/components/pagination/
     nav
         ul(class="pagination")
-            //- li(class="page-item")
-            //-     button(class="page-link") Trang trước
+            if (pagination.currentPage > 1) 
+                li(class="page-item")
+                    button(
+                        class="page-link"
+                        button-pagination=pagination.currentPage - 1
+                    ) Trang trước
 
             - for (var i = 1; i <= pagination.totalPage; ++i) 
                 li(class=`page-item ${pagination.currentPage == i ? "active" : ""}`)
@@ -63,5 +67,9 @@ block main
                         button-pagination=i
                     ) #{i}
 
-            //- li(class="page-item")
-            //-     button(class="page-link") Kế tiếp
+            if (pagination.currentPage < pagination.totalPage) 
+                li(class="page-item")
+                    button(
+                        class="page-link"
+                        button-pagination=pagination.currentPage + 1
+                    ) Kế tiếp
