--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -1,6 +1,7 @@
 extends ../../layouts/default.pug
 include ../../mixins/filter-status.pug
 include ../../mixins/search.pug
+include ../../mixins/pagination.pug
 
 block main
     h1 admin products
@@ -51,25 +52,4 @@ block main
                                     button(class="btn btn-danger btn-sm ml-1") Xóa
 
     // https://getbootstrap.com/docs/4.6/components/pagination/
-    nav
-        ul(class="pagination")
-            if (pagination.currentPage > 1) 
-                li(class="page-item")
-                    button(
-                        class="page-link"
-                        button-pagination=pagination.currentPage - 1
-                    ) Trang trước
-
-            - for (var i = 1; i <= pagination.totalPage; ++i) 
-                li(class=`page-item ${pagination.currentPage == i ? "active" : ""}`)
-                    button(
-                        class="page-link"
-                        button-pagination=i
-                    ) #{i}
-
-            if (pagination.currentPage < pagination.totalPage) 
-                li(class="page-item")
-                    button(
-                        class="page-link"
-                        button-pagination=pagination.currentPage + 1
-                    ) Kế tiếp
+    +pagination(pagination)
