--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -44,12 +44,33 @@ block main
                                 td #{item.price}$
                                 td
                                     if item.status === "active"
-                                        a(href="#" class="badge badge-success") Hoạt động
+                                        a(
+                                            href="javascript:" 
+                                            class="badge badge-success"
+                                            data-status="active"
+                                            data-id=item.id
+                                            button-change-status
+                                        ) Hoạt động
                                     else 
-                                        a(href="#" class="badge badge-danger") Dừng hoạt động
+                                        a(
+                                            href="javascript:" 
+                                            class="badge badge-danger"
+                                            data-status="inactive"
+                                            data-id=item.id
+                                            button-change-status
+                                        ) Dừng hoạt động
                                 td
                                     button(class="btn btn-warning btn-sm") Sửa
                                     button(class="btn btn-danger btn-sm ml-1") Xóa
 
     // https://getbootstrap.com/docs/4.6/components/pagination/
     +pagination(pagination)
+
+    form(
+        action=""
+        method="GET"
+        id="form-change-status"
+        data-path=`${prefixAdmin}/products/change-status/`
+    )
+
+    script(src="/admin/js/product.js")
