--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -68,7 +68,7 @@ block main
 
     form(
         action=""
-        method="GET"
+        method="POST"
         id="form-change-status"
         data-path=`${prefixAdmin}/products/change-status/`
     )
