--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -75,7 +75,11 @@ block main
                                         ) Dừng hoạt động
                                 td
                                     button(class="btn btn-warning btn-sm") Sửa
-                                    button(class="btn btn-danger btn-sm ml-1") Xóa
+                                    button(
+                                        class="btn btn-danger btn-sm ml-1"
+                                        button-permanent-delete
+                                        data-id=item.id
+                                    ) Xóa vĩnh viễn
 
     // https://getbootstrap.com/docs/4.6/components/pagination/
     +pagination(pagination)
@@ -85,6 +89,13 @@ block main
         method="POST"
         id="form-change-status"
         data-path=`${prefixAdmin}/products/change-status/`
+    )
+
+    form(
+        action=""
+        method="POST"
+        id="form-permanent-delete"
+        data-path=`${prefixAdmin}/products/permanent-delete/`
     )
 
     script(src="/admin/js/product.js")
