implement changing products position

--- a/views/admin/mixins/form-change-multi.pug
+++ b/views/admin/mixins/form-change-multi.pug
@@ -11,6 +11,7 @@ mixin form-change-multi(path)
                     option(value="active") Hoạt động 
                     option(value="inactive") Dừng hoạt động
                     option(value="soft-delete") Xóa mềm
+                    option(value="change-position") Đổi vị trí
             .form-group
                 input(
                     type="text"
