--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -33,6 +33,7 @@ block main
                         th Hình ảnh 
                         th Tiêu đề 
                         th Giá
+                        th Vị trí
                         th Trạng thái
                         th Hành động
 
@@ -56,6 +57,14 @@ block main
                                 
                                 td #{item.title}
                                 td #{item.price}$
+                                td  
+                                    input(
+                                        type="number"
+                                        value=item.position 
+                                        name="position"
+                                        min=1
+                                        style="width: 60px"
+                                    )
                                 td
                                     if item.status === "active"
                                         a(
