--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -48,3 +48,41 @@
     border-bottom: 1px solid #515151;
 }
 /* End Sider */
+
+
+/* Show Alert */
+[show-notification] { 
+    position: fixed; 
+    top: 70px; 
+    right: 15px; 
+    z-index: 9999;
+}
+
+[show-notification].notification-hidden {
+    animation-name: notification-hidden;
+    animation-duration: 0.5s;
+    animation-fill-mode: both;
+}
+
+@keyframes notification-hidden {
+    from {
+        right: 15px;
+    }
+    to {
+        right: -100%; 
+        display: none;
+    }
+}
+
+[show-notification] [close-notification] {
+    background:#ffffffc4;
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    line-height: 24px;
+    text-align: center;
+    font-weight: 600; 
+    border-radius: 50%; 
+    cursor: pointer;
+}
+/* End Show Alert */
