--- a/views/admin/pages/products/create.pug
+++ b/views/admin/pages/products/create.pug
@@ -45,7 +45,10 @@ block main
                 min="0"
             )
         
-        div(class="form-group") 
+        div(
+            class="form-group"
+            upload-image
+        ) 
             label(for="thumbnail") Ảnh
             input(
                 type="file"
@@ -53,6 +56,12 @@ block main
                 id="thumbnail"
                 name="thumbnail"
                 accept="image/*"
+                upload-image-input
+            )
+            img(
+                src=""
+                upload-image-preview
+                class="image-preview"
             )
         div(class="form-group")
             label(for="position") Vị trí
