--- a/views/admin/mixins/notification.pug
+++ b/views/admin/mixins/notification.pug
@@ -6,3 +6,12 @@ mixin notification-success(time)
                 show-notification 
                 data-time=time
             ) #{messages.success} <span close-notification>x</span>
+
+mixin notification-error(time) 
+    - if (messages.error)
+        .message.error
+            div(
+                class="alert alert-danger"
+                show-notification 
+                data-time=time
+            ) #{messages.error} <span close-notification>x</span>
