--- a/views/admin/pages/products/create.pug
+++ b/views/admin/pages/products/create.pug
@@ -1,5 +1,9 @@
 extends ../../layouts/default.pug
+include ../../mixins/notification.pug
+
 block main
+    +notification-error("5000")
+
     h1(class="mb-4") Thêm mới sản phẩm
     form(
         action=`${prefixAdmin}/products/create`
