--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -93,6 +93,8 @@ block main
                                             button-change-status
                                         ) Dừng hoạt động
                                 td
+                                    a(href=`${prefixAdmin}/products/detail/${item.id}`)
+                                        button(class="btn btn-info btn-sm") Chi tiết
                                     a(href=`${prefixAdmin}/products/edit/${item.id}`)
                                         button(class="btn btn-warning btn-sm") Sửa
                                     button(
