implement try_catch in find product in pages of admin

--- a/views/admin/pages/products/edit.pug
+++ b/views/admin/pages/products/edit.pug
@@ -111,4 +111,7 @@ block main
                 class="btn btn-primary"
             ) Cập nhật
 
+    a(href=`${prefixAdmin}/products`)
+        button(class="btn btn-primary btn-sm") Về trang danh sách
+
     script(src="/admin/js/product.js")
