--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -7,6 +7,7 @@ include ../../mixins/notification.pug
 
 block main
     +notification-success("5000")
+    +notification-error("5000")
 
     h1 admin products
 
