--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -13,3 +13,7 @@ html
         include ../partials/footer.pug
 
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js")
+        script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js")
+        script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js")
+
+        script(src="/js/notification.js")
