--- a/views/client/pages/products/index.pug
+++ b/views/client/pages/products/index.pug
@@ -1,7 +1,11 @@
 extends ../../layouts/default.pug 
 include ../../mixins/box-head.pug
+include ../../mixins/notification.pug
 
 block main 
+    +notification-success("5000")
+    +notification-error("5000")
+
     .container.my-3
         .row
             .col-12
@@ -11,10 +15,11 @@ block main
         each item in products
             .col-4.mb-3
                 .product-item
-                    .inner-image
-                        img(src=item.thumbnail, alt=item.description)
-                    .inner-content
-                        h3.inner-title #{item.title}
-                        .inner-price-new #{item.priceNew}$
-                        .inner-price-old #{item.price}$
-                        .inner-discount -#{item.discountPercentage}%
+                    a(href=`/products/detail/${item.slug}`)
+                        .inner-image
+                            img(src=item.thumbnail, alt=item.description)
+                        .inner-content
+                            h3.inner-title #{item.title}
+                            .inner-price-new #{item.priceNew}$
+                            .inner-price-old #{item.price}$
+                            .inner-discount -#{item.discountPercentage}%
