--- a/views/client/mixins/notification.pug
+++ b/views/client/mixins/notification.pug
@@ -2,7 +2,8 @@ mixin notification-success(time)
     - if (messages.success)
         .message.success
             div(
-                class="alert alert-success"
+                class="alert alert-success d-flex align-items-center justify-content-center justify-content-between"
+                style="width: 400px; height: 100px; font-size: 30px; padding: 30px "
                 show-notification 
                 data-time=time
             ) #{messages.success} <span close-notification>x</span>
@@ -11,7 +12,8 @@ mixin notification-error(time)
     - if (messages.error)
         .message.error
             div(
-                class="alert alert-danger"
+                class="alert alert-danger d-flex align-items-center justify-content-center justify-content-between"
+                style="width: 400px; height: 100px; font-size: 30px; padding: 30px "
                 show-notification 
                 data-time=time
             ) #{messages.error} <span close-notification>x</span>
