feat(description of product): enable to edit complexly using Tinymce

--- a/views/client/pages/products/detail.pug
+++ b/views/client/pages/products/detail.pug
@@ -26,7 +26,7 @@ block main
             )
 
     if (product.description)
-        div(class="mb-4") #{product.description}
+        div(class="mb-4") !{product.description}
 
     form(
         action=`/products/buy/${product.slug}`
