--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -19,3 +19,7 @@ html
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js")
 
         script(src="/admin/js/script.js")
+
+        //- tinymce
+        script(src="/tinymce/tinymce.min.js")
+        script(src="/admin/js/tinymce_config.js")
