--- a/views/admin/pages/products/edit.pug
+++ b/views/admin/pages/products/edit.pug
@@ -25,7 +25,7 @@ block main
         div(class="form-group") 
             label(for="desc") Mô tả
             textarea(
-                class="form-control"
+                class="form-control tinymce"
                 id="desc"
                 name="description"
                 rows="5"
