--- a/views/admin/pages/product_cate/index.pug
+++ b/views/admin/pages/product_cate/index.pug
@@ -1,18 +1,111 @@
 extends ../../layouts/default.pug
+include ../../mixins/filter-status.pug
+include ../../mixins/search.pug
+include ../../mixins/form-change-multi.pug
 
 block main
     h1 admin product category
     
     .card.mb-3
         .card-header Bộ lọc và Tìm kiếm
+        .card-body
+            .row 
+                .col-6
+                    +filter-status(filterStatus)
+                .col-6 
+                    +search(keyword)
 
     .card.mb-3
         .card-header Danh sách
             .card-body
                 .row 
                     .col-8
+                        +form-change-multi(`${prefixAdmin}/product-category/change-multi?_method=PATCH`)
                     .col-4 
                         a(
                             href=`${prefixAdmin}/product-category/create` 
                             class="btn btn-outline-success"
                         ) + Thêm mới
+
+                table(
+                    class="table table-hover table-sm"
+                    table-products
+                )
+                    thead 
+                        th
+                            input(type="checkbox" name="checkall")
+                        th STT
+                        th Hình ảnh 
+                        th Tiêu đề 
+                        th Vị trí
+                        th Trạng thái
+                        th Hành động
+
+                    tbody
+                        each item, index in records 
+                            tr
+                                td
+                                    input(
+                                        type="checkbox"
+                                        name="id"
+                                        value=item.id
+                                    )
+                                td #{index + 1}
+                                td
+                                    img(
+                                        src=`${item.thumbnail}`
+                                        alt=`${item.description}`
+                                        width="100px"
+                                        height="auto"
+                                    )
+                                
+                                td #{item.title}
+                                td  
+                                    input(
+                                        type="number"
+                                        value=item.position 
+                                        name="position"
+                                        min=1
+                                        style="width: 60px"
+                                    )
+                                td
+                                    if item.status === "active"
+                                        a(
+                                            href="javascript:" 
+                                            class="badge badge-success"
+                                            data-status="active"
+                                            data-id=item.id
+                                            button-change-status
+                                        ) Hoạt động
+                                    else 
+                                        a(
+                                            href="javascript:" 
+                                            class="badge badge-danger"
+                                            data-status="inactive"
+                                            data-id=item.id
+                                            button-change-status
+                                        ) Dừng hoạt động
+                                td
+                                    a(href=`${prefixAdmin}/product-category/detail/${item.id}`)
+                                        button(class="btn btn-info btn-sm") Chi tiết
+                                    a(href=`${prefixAdmin}/product-category/edit/${item.id}`)
+                                        button(class="btn btn-warning btn-sm") Sửa
+                                    button(
+                                        class="btn btn-danger btn-sm ml-1"
+                                        button-permanently-delete
+                                        data-id=item.id
+                                    ) Xóa vĩnh viễn
+                                    button(
+                                        class="btn btn-danger btn-sm ml-1"
+                                        button-recoverable-delete
+                                        data-id=item.id
+                                    ) Xóa mềm
+    
+    form(
+        action=""
+        method="POST"
+        id="form-change-status"
+        data-path=`${prefixAdmin}/product-category/change-status/`
+    )
+
+    script(src="/admin/js/product.js")
