--- a/views/admin/pages/product_cate/edit.pug
+++ b/views/admin/pages/product_cate/edit.pug
@@ -3,10 +3,11 @@ include ../../mixins/notification.pug
 
 block main
     +notification-error("5000")
+    +notification-success("5000")
 
-    h1(class="mb-4") Thêm mới danh mục
+    h1(class="mb-4") Chỉnh sửa danh mục
     form(
-        action=`${prefixAdmin}/product-category/create`
+        action=`${prefixAdmin}/product-category/edit/${record.id}?_method=PATCH`
         id="form-create-product-category"
         method="POST"
         enctype="multipart/form-data"
@@ -18,15 +19,8 @@ block main
                 class="form-control"
                 id="title"
                 name="title"
+                value=record.title
                 required
-            )
-        div(class="form-group") 
-            label(for="parent-id") Danh mục cha
-            input(
-                type="text"
-                class="form-control"
-                id="parent-id"
-                name="parent_id"
             )
         div(class="form-group") 
             label(for="desc") Mô tả
@@ -35,7 +29,8 @@ block main
                 id="desc"
                 name="description"
                 rows="5"
-            )
+                value=record.description
+            ) #{record.description}
         div(
             class="form-group"
             upload-image
@@ -49,8 +44,12 @@ block main
                 accept="image/*"
                 upload-image-input
             )
+            if (record.thumbnail) 
+                div Current image:
+            else 
+                div Current image: none
             img(
-                src=""
+                src=record.thumbnail
                 upload-image-preview
                 class="image-preview"
             )
@@ -63,14 +62,16 @@ block main
                 name="position"
                 placeholder="Tự động tăng"
                 min="1"
+                value=record.position
             )
         div(class="form-group form-check form-check-inline")
             input(
                 type="radio"
                 class="form-check-input"
                 id="statusActive"
-                name="status" value="active"
-                checked
+                name="status" 
+                value="active"
+                checked=(record.status == "active" ? true : false)
             )
             label(for="statusActive" class="form-check-label") Hoạt động 
         div(class="form-group form-check form-check-inline")
@@ -80,10 +81,16 @@ block main
                 id="statusInActive"
                 name="status"
                 value="inactive"
+                checked=(record.status == "inactive" ? true : false)
             )
             label(for="statusInActive" class="form-check-label") Dừng hoạt động
         div(class="form-group")
             button(
                 type="submit"
                 class="btn btn-primary"
-            ) Tạo mới
+            ) Cập nhật
+
+    a(href=`${prefixAdmin}/product-category`)
+        button(class="btn btn-primary btn-sm") Về trang danh sách
+
+    script(src="/admin/js/product.js")
