--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -12,3 +12,5 @@ header.header
                             a(href="/") Trang chủ
                         li
                             a(href="/products") Sản phẩm
+                        li
+                            a(href="/buy-log") Lịch sử
