feat(buy_log): format createdAt

--- a/views/client/pages/buy_log/index.pug
+++ b/views/client/pages/buy_log/index.pug
@@ -37,7 +37,7 @@ block main
                                 td #{item.price}$
                                 td #{item.quantity}
                                 td #{item.total}$
-                                td #{item.createdAt}
+                                td #{item.createdAtFormatted}
                                 td
                                     a(href=`/products/detail/${item.slug}`)
                                         button(class="btn btn-info btn-sm") Chi tiết
